--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -5,14 +5,13 @@
 
 {% block nav_secondary %}
 <ul id="subnav">
-  <li class="{% block menu_team %}{% endblock %}">
-    <a href="{% url team_index %}">Equipes</a>
-  </li>
-  <li class="{% block menu_group %}{% endblock %}">
-    <a href="{% url group_index %}">Groupes d'utilisateur</a>
-  </li>
-  <li class="{% block menu_permission %}{% endblock %}">
-    <a href="{% url perm_index %}">Permissions</a>
-  </li>
+	<li class="{% block menu_team %}{% endblock %}">
+		<a href="{% url team_index %}">Equipes</a>
+	</li>
+	{% if user.is_superuser %}
+	<li class="{% block menu_group %}{% endblock %}">
+		<a href="{% url group_index %}">Groupes d'utilisateur</a>
+	</li>
+	{% endif %}
 </ul>
 {% endblock %}
