--- a/templates/base_preferences.html
+++ b/templates/base_preferences.html
@@ -9,7 +9,7 @@
     <a href="{% url preferences %}">Général</a>
   </li>
   <li class="{% block menu_password %}{% endblock %}">
-    <a href="{% url change_password %}">Mot de passe</a>
+    <a href="{% url change_password %}">Changement de mot de passe</a>
   </li>
 </ul>
 {% endblock %}
