--- a/templates/history/orders.html
+++ b/templates/history/orders.html
@@ -4,128 +4,127 @@
 {% block history_orders %}active{% endblock %}
 
 {% block header %}
-  <h1>Historique commandes</h1>
+	<h1>Historique commandes</h1>
 {% endblock %}
 
 {% block content %}
 <!-- Start: search form -->
 <div class="bar">
-    <a href="#" class="expand">Dérouler</a>
-    <a href="#" class="hide">Cacher</a>
-    <h4>Recherche de commandes réceptionnées</h4>
+		<a href="#" class="expand">Dérouler</a>
+		<a href="#" class="hide">Cacher</a>
+		<h4>Recherche de commandes réceptionnées</h4>
 </div>
 <div class="bar_content">
-  <form action="{% url history %}" method="GET">{% csrf_token %}
-    <strong>Chercher les commandes qui correspondent à {{ filter_form.connector }} conditions suivantes:</strong>
-    <div class="cleaner"></div>
-    <table>
-      <tr>
-        <td>Equipe:</td>
-        <td>{{ filter_form.team }}</td>
-        <td width="10%"></td>
-        <td>Date de réception (min/max):</td>
-        <td>{{ filter_form.date_created__gte }}</td>
-        <td>{{ filter_form.date_created__lte }}</td>
-      </tr>
-      <tr>
-        <td>Fournisseur:</td>
-        <td>{{ filter_form.provider }}</td>
-        <td width="5%"></td>
-        <td>Fournisseur d'origine:</td>
-        <td>{{ filter_form.items__origin }}</td>
-      </tr>
-      <tr>
-        <td>Produit:</td>
-        <td>{{ filter_form.items__name }}</td>
-        <td width="5%"></td>
-        <td>Référence:</td>
-        <td>{{ filter_form.items__reference }}</td>
-      </tr>
-    </table>
-    <div class="cleaner"></div>
-    <button type="submit" class="all">Chercher</button>
-    <a href="{% url history %}" class="refresh">Liste globale</a>
-  </form>
+	<form action="{% url history %}" method="GET">{% csrf_token %}
+		<strong>Chercher les commandes qui correspondent à {{ filter_form.connector }} conditions suivantes:</strong>
+		<div class="cleaner"></div>
+		<table>
+			<tr>
+				<td>Equipe:</td>
+				<td>{{ filter_form.team }}</td>
+				<td width="10%"></td>
+				<td>Date de réception (min/max):</td>
+				<td>{{ filter_form.date_created__gte }}</td>
+				<td>{{ filter_form.date_created__lte }}</td>
+			</tr>
+			<tr>
+				<td>Fournisseur:</td>
+				<td>{{ filter_form.provider }}</td>
+				<td width="5%"></td>
+				<td>Fournisseur d'origine:</td>
+				<td>{{ filter_form.items__origin }}</td>
+			</tr>
+			<tr>
+				<td>Produit:</td>
+				<td>{{ filter_form.items__name }}</td>
+				<td width="5%"></td>
+				<td>Référence:</td>
+				<td>{{ filter_form.items__reference }}</td>
+			</tr>
+		</table>
+		<div class="cleaner"></div>
+		<button type="submit" class="all">Chercher</button>
+		<a href="{% url history %}" class="refresh">Liste globale</a>
+	</form>
 </div>
 <div class="cleaner"></div>
 <br />
 <!-- End: search form -->
 
 {% if history.object_list %}
-  <h2>Liste des commandes réceptionnées - Page {{ history.number }} sur {{ history.paginator.num_pages }}.</h2>
-  
-  {% pagination history %}
-  {% if display == "by_order" %}
-    <table class="list">
-      <thead>
-        <th>Date</th>
-        <th>Equipe</th>
-        <th>Fournisseur</th>
-        <th>Prix</th>
-        {% if user|is_validator or user|is_super_validator or user|is_secretary or user|is_super_secretary %}
-          <th>Budget</th>
-        {% endif %}
-        <th>Action</th>
-      </thead>
-    
-      <tbody>
-        {% for order in history.object_list %}
-          <tr class="{% cycle 'even' 'odd' %}">
-            <td>{{ order.date_delivered|date }}</td>
-            <td>{{ order.team }}</td>
-            <td>{{ order.provider }}</td>
-            <td>{{ order.price }}</td>
-            {% if user|is_validator or user|is_super_validator or user|is_secretary or user|is_super_secretary %}
-              <td>{{ order.budget }}</td>
-            {% endif %}
-            <td>
-              <a href="{{ order.get_absolute_url }}" class="zoomin">Voir détail</a>
-            </td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  {% else %}{% if display == "by_product" %}
-    <table class="list">
-      <thead>
-        <th>Date réception</th>
-        <th>Equipe</th>
-        <th>Utilisateur</th>
-        <th>Fournisseur</th>
-        <th>Produit</th>
-        <th>Conditionnement</th>
-        <th>Référence</th>
-        <th>N° Offre</th>
-        <th>Prix unitaire</th>
-        <th>Quantité</th>
-        <th>Prix total</th>
-        <th>Montant cmde</th>
-      </thead>
-      <tbody>
-        {% for order in history.object_list %}
-          {% for product in order.items.all %}
-            <tr>
-              <td>{{ order.date_delivered|date }}</td>
-              <td>{{ order.team }}</td>
-              <td>{{ product.get_fullname }}</td>
-              <td>{{ order.provider }}{% if product.origin %} - {{ product.origin }}{% endif %}</td>
-              <td>{{ product.name }}</td>
-              <td>{{ product.packaging|default:"" }}</td>
-              <td>{{ product.reference|default:"" }}</td>
-              <td>{{ product.offer_nb|default:"" }}</td>
-              <td>{{ product.price }} €</td>
-              <td>{{ product.quantity }}</td>
-              <td>{{ product.total_price }} €</td>
-              <td>{{ order.price }} €</td>
-            </tr>
-          {% endfor %}
-        {% endfor %}
-      </tbody>
-    </table>
-  {% endif %}{% endif %}
-  {% pagination history %}
+	<h2>Liste des commandes réceptionnées - Page {{ history.number }} sur {{ history.paginator.num_pages }}.</h2>
+	
+	{% pagination history %}
+	{% if display == "by_order" %}
+		<table class="list">
+			<thead>
+				<th>Date</th>
+				<th>Equipe</th>
+				<th>Fournisseur</th>
+				<th>Prix</th>
+				{% if user|has_perm:"budget.custom_view_budget" %}
+					<th>Budget</th>
+				{% endif %}
+				<th>Action</th>
+			</thead>
+			<tbody>
+				{% for order in history.object_list %}
+				<tr class="{% cycle 'even' 'odd' %}">
+					<td>{{ order.date_delivered|date }}</td>
+					<td>{{ order.team }}</td>
+					<td>{{ order.provider }}</td>
+					<td>{{ order.price }}</td>
+					{% if user|has_perm:"budget.custom_view_budget" %}
+						<td>{{ order.budget }}</td>
+					{% endif %}
+					<td>
+						<a href="{{ order.get_absolute_url }}" class="zoomin">Voir détail</a>
+					</td>
+				</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+	{% else %}{% if display == "by_product" %}
+		<table class="list">
+			<thead>
+				<th>Date réception</th>
+				<th>Equipe</th>
+				<th>Utilisateur</th>
+				<th>Fournisseur</th>
+				<th>Produit</th>
+				<th>Conditionnement</th>
+				<th>Référence</th>
+				<th>N° Offre</th>
+				<th>Prix unitaire</th>
+				<th>Quantité</th>
+				<th>Prix total</th>
+				<th>Montant cmde</th>
+			</thead>
+			<tbody>
+				{% for order in history.object_list %}
+					{% for product in order.items.all %}
+						<tr class="{% cycle 'even' 'odd' %}">
+							<td>{{ order.date_delivered|date }}</td>
+							<td>{{ order.team }}</td>
+							<td>{{ product.get_fullname }}</td>
+							<td>{{ order.provider }}{% if product.origin %} - {{ product.origin }}{% endif %}</td>
+							<td>{{ product.name }}</td>
+							<td>{{ product.packaging|default:"" }}</td>
+							<td>{{ product.reference|default:"" }}</td>
+							<td>{{ product.offer_nb|default:"" }}</td>
+							<td>{{ product.price }} €</td>
+							<td>{{ product.quantity }}</td>
+							<td>{{ product.total_price }} €</td>
+							<td>{{ order.price }} €</td>
+						</tr>
+					{% endfor %}
+				{% endfor %}
+			</tbody>
+		</table>
+	{% endif %}{% endif %}
+	{% pagination history %}
 {% else %}
-  <h2>Liste des commandes réceptionnées</h2>
-  <p>Aucun résultat.</p>
+	<h2>Liste des commandes réceptionnées</h2>
+	<p>Aucun résultat.</p>
 {% endif %}
 {% endblock %}
