--- a/templates/product/form.html
+++ b/templates/product/form.html
@@ -4,7 +4,7 @@
 
 {% block header %}
   <h1>Gestion des produits</h1>
-  <h2>Nouveau produit</h2>
+  <h2>Ajout d'un nouveau produit</h2>
 {% endblock %}
 
 {% block content %}
