--- a/templates/budget/form.html
+++ b/templates/budget/form.html
@@ -4,20 +4,16 @@
 {% block menu_budget_new %}active{% endblock %}
 
 {% block header %}
-  <h1>Gestion des budgets</h1>
-  <h2>Ajout d'un nouveau budget</h2>
+<h1>Gestion des budgets</h1>
+<h2>Ajout d'un nouveau budget</h2>
 {% endblock %}
 
 {% block content %}
-<form action="{% url budgets %}" method="post">{% csrf_token %}
-    <p class="instructions">
-      <em>Les champs marqués d'une étoile sont obligatoires</em>
-    </p>
-    <fieldset>
-      {% for field in form %}
-          {% include "form_snippet.html"%}
-      {% endfor %}
-    </fieldset>
-    <button type="submit" class="check">Valider</button>
+<form action="{% url budget_new %}" method="post">{% csrf_token %}
+	<p class="instructions">Les champs marqués d'une étoile sont obligatoires</p>
+	<fieldset>
+		{% for field in form %}{% include "form_snippet.html"%}{% endfor %}
+	</fieldset>
+	<button type="submit" class="check">Valider</button>
 </form>
 {% endblock %}
