--- a/templates/new_base.html
+++ b/templates/new_base.html
@@ -8,6 +8,7 @@
 <title>Commandes LBCMCP - {% block title %}{% endblock %}</title>
 <link type="image/gif" rel="icon" href="{{ MEDIA_URL }}img/icons/favicon.gif" />
 <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}css/new_style.css" />
+<link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}css/new_form.css" />
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/humanity/jquery-ui-1.8.16.custom.css" type="text/css" />
 
 <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.6.4.min.js"></script>
@@ -23,12 +24,7 @@
     <!-- start: header-->
     <div id="header">
       <div id="top">
-          {% block identification %}
-              {# {% if not user.is_anonymous %} #}
-              {#     <a id="top_profil" href="{% url user_item user.id %}">{{ user.username }}</a> #}
-              {# {% endif %} #}
-              <a id="top_logout" href="{% url logout %}">{{ user.username }} (déconnexion)</a>
-          {% endblock %}
+        <a id="top_logout" href="{% url logout %}">{{ user.username }} (déconnexion)</a>
       </div>
       <div class="cleaner"></div>
       
@@ -52,7 +48,7 @@
         <li class="{% block tab_orders %}{% endblock %}">
           <a href="{% url tab_orders %}">Commandes</a>
         </li>
-        {% if user|is_super_secretary or user|is_validator or user|is_super_validator %}
+        {% if user|has_perm:"budget.custom_view_budget" %}
           <li class="{% block tab_budgets %}{% endblock %}">
             <a href="{% url budgets %}">Budgets</a>
           </li>
@@ -63,7 +59,7 @@
         <li class="{% block tab_preferences %}{% endblock %}">
           <a href="{% url preferences %}">Préférences</a>
         </li>
-        {% if user.is_superuser or user|is_admin %}
+        {% if user|has_perm:"team.custom_view_teams" %}
           <li class="{% block tab_admin %}{% endblock %}">
             <a href="{% url team_index %}">Admin</a>
           </li>
