--- a/templates/order/index.html
+++ b/templates/order/index.html
@@ -1,121 +1,101 @@
-{% extends "main_custom.html" %}
+{% extends "base_orders.html" %}
 {% load paginator filters %}
 
-{% block menu_order %}selected{% endblock %}
+{% block menu_order %}active{% endblock %}
+
+{% block header %}
+	<h1>Gestion des commandes</h1>
+	{% if user|has_perm:"order.custom_goto_status_4" and not user.is_superuser %}
+		<h2>Commandes à saisir</h2>
+	{% else %}
+		<h2>Commandes en cours</h2>
+	{% endif %}
+{% endblock %}
+
 {% block content %}
-
-<div id="content" style="min-height:0">
-  <div id="content_header"><h2>Commandes équipe {{ user.teammember_set.get.team }}</h2></div>
-  
-  {% if orders.object_list %}
-    <table class="list">
-      <thead>
-        <th>Date</th>
-        <th>Fournisseur</th>
-        <th>Prix</th>
-        <th>Statut</th>
-        <th>Dernière MAJ</th>
-        <th>Action</th>
-      </thead>
-      
-      <tbody>
-        {% for order in orders.object_list %}
-          <tr class="{% cycle 'even' 'odd' %}">
-            <td>{{ order.date_created|date }}</td>
-            <td>{{ order.provider.name }}</td>
-            <td>{{ order.price }} €</td>
-            <td>
-              <b>{{ order.get_status_display }}</b>
-              {% if order.date_delivered %}
-                <b>le {{ order.date_delivered|date }}</b>
-              {% endif %}
-            </td>
-            <td>{{ order.last_change|date }}</td>
-            
-            {# ACTION LINKS - MODIFYING ORDER STATUS #}
-            <td>
-              {% if order.status == 1 and user|is_validator %}
-                <a href="{% url set_next_status order.id %}" class="check budgetLineDialog">
-                  Valider
-                </a>
-                <a href="{% url order_delete order.id %}" class="trash confirmDel">
-                  Supprimer
-                </a>
-              {% else %}
-                {% if user|is_secretary %}
-                  <a href="{% url set_next_status order.id %}" class="next-status button">
-                    {% if order.status == 2 %}
-                      Secrétariat 2/2
-                    {% else %}{% if order.status == 3 %}
-                      Transmise au fournisseur
-                    {% endif %}{% endif %}
-                  </a>
-                {% else %}
-                  {% if order.status == 2 or order.status == 3 %}
-                    <a href="{% url order_delivered order.id %}" class="notice dateDialog">
-                      Commande réceptionnée
-                    </a>
-                  {% endif %}
-                {% endif %}
-                
-                {% if order.status == 4 %}
-                  <a href="{% url order_delivered order.id %}" class="notice dateDialog">
-                    Commande réceptionnée
-                  </a>
-                {% endif %}
-              {% endif %}
-              <a href="{{ order.get_absolute_url }}" class="zoomin">
-                Voir détail
-              </a>
-            </td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    
-    {% pagination orders %}
-    <div class="cleaner"></div>
-  {% else %}
-    <p>Aucune commande en cours.</p>
-  {% endif %}
-</div>
-
-
+{% if orders.object_list %}
+	<table class="list">
+		<thead>
+			<th>Date</th>
+			<th>Dernière MAJ</th>
+			<th>Fournisseur</th>
+			{% if user|has_multiple_teams or user|has_perm:"team.custom_view_teams" %}
+			<th>Equipe</th>
+			{% endif %}
+			{% if user|has_perm:"budget.custom_view_budget" %}
+			<th>Budget</th>
+			{% endif %}
+			<th>Montant</th>
+			<th>Statut</th>
+			<th>Cmde N°</th>
+			<th>Action</th>
+		</thead>
+		<tbody>
+			{% for order in orders.object_list %}
+			<tr class="{% cycle 'even' 'odd' %}">
+				<td>{{ order.date_created|date }}</td>
+				<td>{{ order.last_change|date }}</td>
+				<td>{{ order.provider.name }}</td>
+				{% if user|has_multiple_teams or user|has_perm:"team.custom_view_teams" %}
+					<td>{{ order.get_full_name }}</td>
+				{% endif %}
+				{% if user|has_perm:"budget.custom_view_budget" %}
+					{% if order.budget %}
+					<td>{{ order.budget.name }}</td>
+					{% else %}
+					<td class="warning" style="background-position:center"></td>
+					{% endif %}
+				{% endif %}
+				<td>{{ order.price }} €</td>
+				<td><b>{{ order.get_status_display }}</b></td>
+				<td>{{ order.number|default:"" }}</td>
+				<td>
+					{% if order.status == 3 and user|has_perm:"order.custom_goto_status_4"%}
+						{% if order.budget.budget_type == 0 %}
+							<a href="{{ order.get_absolute_url }}?next=tab_orders" class="next-status xlab">Saisie XLAB</a>
+						{% else %}
+							<a href="{{ order.get_absolute_url }}?next=tab_orders" class="next-status sifac">Saisie SIFAC</a>
+						{% endif %}
+					{% else %}
+						<a href="{{ order.get_absolute_url }}?next=tab_orders" class="pencil">Voir détail</a>
+						{% if order.status == 4 %}
+							<a href="{% url set_next_status order.id %}" class="next-status setDeliveryDate">
+								Commande réceptionnée
+							</a>
+						{% endif %}
+					{% endif %}
+				</td>
+			</tr>
+			{% endfor %}
+		</tbody>
+	</table>
+	{% pagination orders %}
+{% else %}
+	<p>Aucune commande en cours.</p>
+{% endif %}
 
 {# ################## #}
-{#                    #}
-{#      DIALOGS       #}
-{#                    #}
+{#										#}
+{#			DIALOGS				#}
+{#										#}
 {# ################## #}
 
-<div id="dialog-date" title="Date de livraison">
-  <div class="form-row">
-    <p>Veuillez indiquer la date à laquelle la commande a été livrée.</p>
-    <label for="delivery_date">Date de livraison (jj/mm/aaaa):</label>
-    <div class="cleaner"></div>
-    <input type="text" name="delivery_date" class="datepicker" />
-    <div class="cleaner"></div>
-  </div>
+<div id="setDeliveryDate" class="dialog" title="Date de livraison">
+	<div class="form-row">
+		<label for="delivery_date">Date de livraison (jj/mm/aaaa):</label>
+		<div class="cleaner"></div>
+		<input type="text" name="delivery_date" class="datepicker" />
+		<div class="cleaner"></div>
+	</div>
 </div>
 
-<div id="confirmDel" title="Confirmer la suppression">
-  Êtes-vous sûr de vouloir supprimer cette commande ?
-</div>
-
-<div id="dialog-qty" title="Modifier la quantité">
-  <div class="form-row">
-    <label for="quantity">Quantité</label>
-    <div class="cleaner"></div>
-    <input type="text" name="quantity" value="0" />
-  </div>
-</div>
-
-<div id="dialog-budget-line" title="Choisir une ligne budgétaire">
-  <div class="form-row">
-    <label for="budget_line">Ligne budgétaire</label>
-    <div class="cleaner"></div>
-    <input type="text" name="budget_line" value="0" />
-  </div>
+<div id="setOrderNb" class="dialog" title="Saisie du N° de commande">
+	<div class="form-row">
+		<label for="number">N° de commande:</label>
+		<div class="cleaner"></div>
+		<input type="text" name="number" />
+		<div class="cleaner"></div>
+	</div>
 </div>
 
 {% endblock %}
