--- a/templates/order/item.html
+++ b/templates/order/item.html
@@ -1,90 +1,15 @@
-{% extends "main_custom.html" %}
-{% load paginator filters %}
+{% extends "base_orders.html" %}
 
-{% block menu_order %}selected{% endblock %}
-
-{% block buttons %}
-<div class="btn_wrapper">
-  <a href="{{ prev_url }}" class="btn_small">
-    <img src="{{ MEDIA_URL }}img/icons/arrow_left.png" />Retour
-  </a>
-</div>
+{% block menu_order %}active{% endblock %}
+{% block header %}
+<h1>Gestion des commandes</h1>
+<h2>Commandes en cours</h2>
 {% endblock %}
 
 {% block content %}
-<div id="content" style="min-height:0">
-  <div id="content_header">
-    <h2>{{ order.provider }} - {{ order.date_created|date }}</h2>
-  </div>
-  <ul>
-    <li>Commande équipe {{ order.team }}</li>
-    <li>Statut: {{ order.get_status_display }}</li>
-    {% if user|is_validator %}
-      {% if not order.number and not order.provider.is_local %}
-        <li><strong>Budget à imputer:</strong>
-          <select id="select-budget" url="{% url order_budget order.id %}">
-            {% for budget in budgets %}
-              <option value="{{budget.id}}" {% if order.budget == budget %}selected="selected"{% endif %}>
-                {{budget}}
-              </option>
-            {% endfor %}
-          </select>
-        </li>
-      {% else %}{% if order.number and order.budget %}
-        <li>Budget imputé:{{ order.budget }}</li>
-      {% endif %}{% endif %}
-    {% endif %}
-  </ul>
-  
-  <table class="list">
-    <thead>
-      <th>Utilisateur</th>
-      <th>Produit</th>
-      <th>Conditionnement</th>
-      <th>Référence</th>
-      <th>N° Offre</th>
-      <th>Prix unitaire</th>
-      <th>Quantité</th>
-      <th>Prix total</th>
-      <th>Action</th>
-    </thead>
-    
-    <tbody>
-      {% for order_item in order.items.all %}
-        <tr class="{% cycle 'odd' 'even' %}">
-          <td>{{ order_item.get_fullname }}</td>
-          <td>{{ order_item.name }}</td>
-          <td>{{ order_item.packaging|default:"" }}</td>
-          <td>{{ order_item.reference|default:"" }}</td>
-          <td>{{ order_item.offer_nb|default:"" }}</td>
-          <td>{{ order_item.price }} €</td>
-          <td>{{ order_item.quantity }}</td>
-          <td>{{ order_item.total_price }} €</td>
-          {% if user|is_secretary %}
-            <td>
-              <a href="{% url orderitem_detail order_item.id %}" class="pencil">
-                Modifier
-              </a>
-              <a href="{% url orderitem_delete order_item.id %}" class="trash confirmDel">
-                Supprimer
-              </a>
-            </td>
-          {% endif %}
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-  
-  <p><strong>PRIX TOTAL COMMANDE: {{ order.price }} €</strong></p>
-  <a href="{% url tab_orders %}" class="check">Valider</a>
-  
-  {% if user|is_secretary %}
-    <div style="float:right">
-      <a href="{% url add_debit order.id %}?next={{order.get_absolute_url}}" class="plus">Frais annexes</a>
-      <a href="{% url add_credit order.id %}?next={{order.get_absolute_url}}" class="minus">Remises</a>
-    </div>
-  {% endif %}
-  
-  {% include "order/_dialogs.html" %}
+<h2 class="order-title">Fournisseur: {{ order.provider }}</h2>
+<div class="order">
+	{% include "order/_order_detail.html" %}
 </div>
+{% include "order/_dialogs.html" %}
 {% endblock %}
