--- a/templates/order/orderitem_detail.html
+++ b/templates/order/orderitem_detail.html
@@ -1,42 +1,36 @@
-{% extends "main_custom.html" %}
+{% extends "base_orders.html" %}
 {% load filters %}
+{% block menu_order %}active{% endblock %}
 
-{% block menu_order %}selected{% endblock %}
-
-{% block header %}Modification d'un produit{% endblock %}
-
-{% block buttons %}
-<div class="btn_wrapper">
-  <a href="{% url order_item order.id %}" class="btn_small">
-    <img src="{{ MEDIA_URL }}img/icons/arrow_left.png" />Retour
-  </a>
-</div>
+{% block header %}
+<h1>Fournisseur: {{ order.provider }}</h1>
+<h2>Modification d'un produit</h2>
 {% endblock %}
 
 {% block content %}
-<div id="content" style="min-height:0">
-  <div id="content_header"><h2>Modification d'un produit</h2></div>
-  <form id="productUpdateForm" action="{% url orderitem_detail orderitem.id %}" method="POST">{% csrf_token %}
-    <p class="instructions">
-      <em>Les champs marqués d'une étoile sont obligatoires</em>
-    </p>
-    {% for field in form %}
-      {% include "form_snippet.html"%}
-    {% endfor %}
-    <input type="hidden" name="send_changes" value="False" />
-    {% if orderitem.product_id %}
-      <button type="submit" class="check sendChanges">Valider</button>
-    {% else %}
-      <button type="submit" class="check">Valider</button>
-    {% endif %}
-    <a href="{% url order_item order.id %}" class="back">Annuler</a>
-  </form>
-</div>
+<form id="productUpdateForm" action="{% url orderitem_detail orderitem.id %}" method="POST">{% csrf_token %}
+	<p class="instructions">
+		<em>Les champs marqués d'une étoile sont obligatoires</em>
+	</p>
+	<fieldset>
+	{% for field in form %}{% include "form_snippet.html"%}{% endfor %}
+	
+	<input type="hidden" name="send_changes" value="False" />
+	
+	{% if orderitem.product_id %}
+		<button type="submit" class="check sendChanges">Valider</button>
+	{% else %}
+		<button type="submit" class="check">Valider</button>
+	{% endif %}
+	
+	<a href="{% url order_item order.id %}" class="back">Annuler</a>
+	</fieldset>
+</form>
 
 <div id="sendChanges" class="dialog" title="Modification de prix">
-  Vous apportez une modification au prix d'un ou plusieurs produits.
-  Cette modification va devenir permanente dans la base de données.
-  S'il s'agît d'une remise ponctuelle, merci d'utiliser le bouton "Remise".
+	Vous apportez une modification au prix d'un ou plusieurs produits.
+	Cette modification va devenir permanente dans la base de données.
+	S'il s'agît d'une remise ponctuelle, merci d'utiliser le bouton "Remise".
 </div>
 
 {% endblock %}
