--- a/templates/product/item.html
+++ b/templates/product/item.html
@@ -16,12 +16,12 @@
   <h2>Modification d'un produit</h2>
 {% endblock %}
 
-{% if product|is_in_charge:user or user|is_admin %}
-  <div class="btn_wrapper">
-    <a href="{% url product_delete product.id %}" class="btn_big">
-      <img src="{{ MEDIA_URL }}img/icons/cross.png" />Supprimer ce produit
-    </a>
-  </div>
+{% if user|has_perm:"product.custom_delete_product" %}
+<div class="btn_wrapper">
+  <a href="{% url product_delete product.id %}" class="btn_big">
+    <img src="{{ MEDIA_URL }}img/icons/cross.png" />Supprimer ce produit
+  </a>
+</div>
 {% endif %}
 
 {% block content %}
