--- a/templates/provider/form.html
+++ b/templates/provider/form.html
@@ -1,16 +1,5 @@
-{% extends "base_main.html" %}
-{% block menu_provider %}active{% endblock %}
-
-{% block nav_secondary %}
-<ul id="subnav">
-  <li>
-    <a href="{% url provider_index %}">Liste des fournisseurs</a>
-  </li>
-  <li class="active">
-    <a href="{% url provider_new %}">Ajouter un fournisseur</a>
-  </li>
-</ul>
-{% endblock %}
+{% extends "base_provider.html" %}
+{% block provider_new %}active{% endblock %}
 
 {% block header %}
   <h1>Gestion des fournisseurs</h1>
