--- a/templates/tab_validation.html
+++ b/templates/tab_validation.html
@@ -4,92 +4,20 @@
 {% block menu_validation %}active{% endblock %}
 
 {% block header %}
-  <h1>Gestion des commandes</h1>
-  <h2>Commandes à valider</h2>
+<h1>Gestion des commandes</h1>
+<h2>Commandes à valider</h2>
 {% endblock %}
 
 {% block content %}
 {% for order in orders.object_list %}
-  {% pagination orders %}
-  <form class="order">
-    <h3>{{ order.team.name }} - {{ order.provider|upper }}</h3>
-    <fieldset>
-      <ul class="brown_arrow" style="float:left">
-        <li>Commande créée le {{ order.date_created|date }}</li>
-        {% if not order.provider.is_local %}
-          <li><strong>Budget à imputer:</strong>
-            <select id="select-budget" url="{% url order_budget order.id %}">
-              <option value="0" {% if not order.budget %}selected="selected"{% endif %}>
-                Défini par la gestionnaire
-              </option>
-              {% for budget in budgets %}
-                <option value="{{budget.id}}" {% if order.budget and order.budget == budget %}selected="selected"{% endif %}>
-                  {{budget}}
-                </option>
-              {% endfor %}
-            </select>
-          </li>
-        {% endif %}
-      </ul>
-      <div style="float:right">
-        <h4>Commentaires</h4>
-        <textarea id="order_notes" url="{% url set_order_notes order.id %}" class="small_textarea">
-          {{ order.notes|default:"" }}
-        </textarea>
-      </div>
-      <br />
-      <table class="list">
-        <thead>
-          <th>Utilisateur</th>
-          <th>Produit</th>
-          <th>Conditionnement</th>
-          <th>Référence</th>
-          <th>N° Offre</th>
-          <th>Prix unitaire</th>
-          <th>Quantité</th>
-          <th>Prix total</th>
-          <th>Action</th>
-        </thead>
-
-        <tbody>
-          {% for order_item in order.items.all %}
-            <tr class="{% cycle 'odd' 'even' %}" id="{{ order_item.id }}">
-              <td>{{ order_item.get_fullname }}</td>
-              <td>{{ order_item.name }}</td>
-              <td>{{ order_item.packaging|default:"" }}</td>
-              <td>{{ order_item.reference|default:"" }}</td>
-              <td>{{ order_item.offer_nb|default:"" }}</td>
-              <td>{{ order_item.price }} €</td>
-              <td>
-                <input type="text" name="setQuantity" value="{{ order_item.quantity }}" style="width:15px;" />
-              </td>
-              <td>{{ order_item.total_price }} €</td>
-              <td>
-                <button id="{{order_item.id}}" href="{% url orderitem_delete order_item.id %}?next=tab_validation" class="trash confirmDelCart">
-                  Retirer du panier
-                </button>
-              </td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      <br />
-    <p>PRIX TOTAL COMMANDE: <b>{{ order.price }} €</b></p><br />
-    <div style="float:right">
-      <a href="{% url add_debit order.id %}?next={{next}}" class="plus">Frais annexes</a>
-      <a href="{% url add_credit order.id %}?next={{next}}" class="minus">Remises</a>
-    </div>
-    <a href="{% url tab_validation %}" class="disk ajax-post" url="{% url set_item_quantity %}">
-      Enregistrer les modifications
-    </a>
-    <a href="{% url set_next_status order.id %}" class="check save-changes">Valider la commande</a>
-    <a href="{% url order_delete order.id %}" class="trash confirmDel">Supprimer</a>
-    </fieldset>
-  </form>
-  <br />
-  {% include "order/_dialogs.html" %}
-  {% pagination orders %}
+	{% pagination orders %}
+	<h2 class="order-title">Fournisseur: {{ order.provider }}</h2>
+	<div class="order">
+		{% include "order/_order_detail.html" %}
+	</div>
+	{% pagination orders %}
 {% empty %}
-  <p>Aucune commande à valider.</p>
+	<p>Aucune commande à valider.</p>
 {% endfor %}
+{% include "order/_dialogs.html" %}
 {% endblock %}
